[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
  ".venv/*",
  "sacro/__main__.py",
  "sacro/asgi.py",
  "sacro/middleware.py",
]
source = [
  "sacro",
  "tests",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
addopts = "--ignore=./build"
DJANGO_SETTINGS_MODULE = "sacro.settings"

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
  "data",
]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.isort]
lines-after-imports = 2

# Documentation dependencies
[project.optional-dependencies]
docs = [
  "sphinx>=5.0",
  "sphinx-issues",
  "sphinx-prompt",
  "pydata-sphinx-theme",
  "sphinx-design",
]
